--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.64.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.1",
+    "react-spinners": "^0.17.0",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
