--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.9.1",
     "react-spinners": "^0.17.0",
+    "sweetalert2": "^11.26.2",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
